<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Talky Message</string>
    
    <string name="menu_action_bar_ayarlar_title">Ayarlar</string>
    <string name="menu_action_bar_profil_title">Profil</string>
    <string name="menu_action_bar_kimler_title">Kişiler</string>
    <string name="menu_action_bar_hakkimizda_title">Hakkımızda</string>
    <string name="menu_action_bar_harita_title">Harita</string>
    
    <string name="pref_category_gizlilik">GİZLİLİK</string>
    <string name="pref_category_gizlilik_title">Gizlilik</string>
    <string name="pref_category_gizlilik_summary">Gizlilik Ayarları</string>
    
    <string name="pref_category_uyarilar">UYARILAR</string>
    <string name="pref_category_uyarilar_title">Uyarılar</string>
    <string name="pref_category_uyarilar_summary">Uyarı Ayarları</string>
    
    <string name="pref_category_tonlar">TONLAR</string>
    <string name="pref_category_tonlar_title">Tonlar</string>
    <string name="pref_category_tonlar_summary">Bildirim Tonları</string>
    
    <string name="pref_otomatik_baslat_title">Otomatik başlat</string>
    <string name="pref_konum_bilgimi_gonder_title">Konum bilgimi gönder</string>
    <string name="pref_arkadas_uyari_title">Yakındakileri bildir</string>
    
    <string name="pref_yakinlik_title">Yakınlık Ölçüsü</string>
    <string name="pref_yakinlik_summary">Ne kadar yakın ?</string>
    
    <string name="pref_bildirim_tonu_title">Bildirim Tonu</string>
    <string name="pref_bildirim_tonu_summary">Arkadaş uyarı tonu</string>
    
    <string name="kullanici_adi">Kullanıcı Adı</string>
    <string name="sifre">Şifre</string>
    <string name="ad">Ad</string>
    <string name="ad_zorunlu">Ad (*)</string>
    <string name="soyad">Soyad</string>
    <string name="soyad_zorunlu">Soyad (*)</string>
    <string name="email">Email Adresi</string>
    <string name="cinsiyet">Cinsiyet</string>
    <string name="dogum_gunu">Doğum Günü</string>
    <string name="telefon">Telefon Numarası</string>
    <string name="kaydet">Kaydet</string>
    
    <string name="toast_bilinmeyen_hata">Bilinmeyen bir hata oluştu. Lütfen daha sonra tekrar deneyin!</string>
    <string name="toast_profil_kaydet_basarili">Profiliniz başarıyla kaydedildi!</string>
    <string name="toast_profil_validasyon_hatasi">Lütfen zorunlu alanları doldurduğunuzdan emin olun!</string>
    <string name="toast_bos_parametre_hatasi">%1$s boş bırakılamaz!</string>
    
    <string name="arkadas_ekle">Arkadaş Ekle</string>
    <string name="ekle">Ekle</string>
    <string name="iptal">İptal</string>
    <string name="toast_kayitli_profil_yok">Henüz bir profil oluşturmadınız. Lütfen önce profilinizi oluşturun…</string>
	<string name="toast_arkadas_profil_bulunamadi">Bu kullanıcı adına sahip bir profil bulunamadı!</string>
	<string name="toast_arkadas_zaten_mevcut">Bu kullanıcı zaten arkadaşınız…</string>
	<string name="toast_arkadas_ekle_basarili">Arkadaşınız başarıyla eklendi…</string>
	<string name="toast_arkadas_bulunamadi">Henüz bir arkadaşınız bulunmamaktadır…</string>
	
	<string name="yakinlik_notification">Yakınlarda bir arkaşınız var…</string>
	<string name="yakinlik_notification_baslik">Kim Nerede</string>
	<string name="yakinlik_notification_ayrinti">%1$s yakınlarınızda!</string>
	<string name="son_guncelleme">Güncelleme : %1$s</string>
	<string name="str_uygulama_bilgisi">Istanbul Arel University\nComputer Engineering Division\n\nThis Project was Developed By:\nEmre KUŞOĞLU,\nBerna GERÇEK\nand\nAbdulnasır OLCAN\n\n\nAll Rights Reserved 2014</string>
    
</resources>