<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/txtKullaniciAdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kullanici_adi"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/DiaBtnArkadasEkle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ekle" 
            android:layout_weight=".5"/>
        
        <Button
            android:id="@+id/DiaBtnArkIptal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iptal" 
            android:layout_weight=".5"/>
        
    </LinearLayout>

</LinearLayout>